--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -20,7 +20,8 @@
 <div id="menu">
 
 <ul>
-    <li><a href="/readme">Readme</a></li>
+    <li><a href="/">Overview</a></li>
+    <li><a href="/quickstart">Quick Start</a></li>
     <li><a href="/documentation">Documentation</a></li>
     <li><a href="/contribute">Contribute</a></li>
     <li><a href="/about">About</a></li>
