--- a/views/home.tt
+++ b/views/home.tt
@@ -1,6 +1,6 @@
 <h1>Dancer</h1>
 
-<p>
+<p style="margin: 0; margin-bottom: 1em;">
 <em>The easiest way to write web applications in Perl</em>
 </p>
 
