--- a/views/contribute.tt
+++ b/views/contribute.tt
@@ -38,3 +38,14 @@ having forked the project</a> on GitHub you have a written patch to submit the f
 that's really great. At the time, the best way to get a review is to request a pull from
 <a href="http://github.com/sukria">sukria</a>.
 </p>
+
+<h3>Fix this website</h3>
+<p>
+Yeah, that website is written with <a
+href="http://search.cpan.org/perldoc?Dancer">Dancer</a>, and is free software. That means you
+can grab <a href="http://github.com/sukria/perldancer-website">the source code on GitHub</a> 
+and if you find a typo or something wrong, patch it and request a pull from 
+<a href="http://github.com/sukria">sukria</a>.  That's also a good way to contribute to the project.
+</p>
+
+
