--- a/views/documentation.tt
+++ b/views/documentation.tt
@@ -480,7 +480,7 @@ This is a possible webapp created with Dancer :
     };
 
     get '/hello/:name' => sub {
-        "Hello ".params->{name}"
+        "Hello ".params->{name}
     };
 
     # run the webserver
