--- a/views/example.tt
+++ b/views/example.tt
@@ -1,25 +1,32 @@
-#!/usr/bin/perl
+<h2>Look through my soul</h2>
 
+<p>
+What's better than showing you how this website is written, isn't that the best
+example I could show?
+</p>
+
+<pre class="prettyprint">
+#!/usr/bin/perl
+ 
 use Dancer;
 use Template;
 
 my @pages = qw(quickstart documentation contribute about example);
 
 get '/' => sub {
-    debug "GET /";
     template 'home';
 };
 
 get '/:page' => sub {
     my ($page) = params->{page};
     pass and return false unless grep /$page/, @pages;
-    debug "GET /$page";
     template $page;
 };
 
 get '/*' => sub {
-    status 'not_found';
-    template 'not_found';
+   status 'not_found';
+   template 'not_found';
 };
 
 dance;
+</pre>
