--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -22,6 +22,7 @@
 <ul>
     <li><a href="/">Overview</a></li>
     <li><a href="/quickstart">Quick Start</a></li>
+    <li><a href="/example">Example</a></li>
     <li><a href="/documentation">Documentation</a></li>
     <li><a href="/contribute">Contribute</a></li>
     <li><a href="/about">About</a></li>
