--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -24,6 +24,7 @@
     <li><a href="/quickstart">Quick Start</a></li>
     <li><a href="/example">Example</a></li>
     <li><a href="/documentation">Documentation</a></li>
+    <li><a href="/download">Download</a></li>
     <li><a href="/contribute">Contribute</a></li>
     <li><a href="/about">About</a></li>
 </ul>
