--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,8 @@
-body {
+* { margin: 0 }
+html, body {
+    height: 100%;
     background-color: #3c516e;
+    margin: 0;
 }
 
 a { 
@@ -46,19 +49,34 @@ a:hover {
     text-transform:uppercase;
 }
 
-#footer {
-   font-size: 12px;
-   color: #eee;
-   margin-top: 20px;
-   bottom: 4px;
+#push, #footer {
+    height: 28px;
 }
+
+#footer {
+    background: #fff;
+    border-top: 4px solid #444;
+
+    margin-top: 30px;
+    padding-top: 2px;
+
+    font-family:sans-serif;
+    font-size: 12px;
+    color: #999;
+    text-align: center;
+}
+
 #footer a {
-    color: #eeb938;
+    color: #99b;
 }
 
 #container {
-    height: 500px;
+    /* height: 500px; */
     background: #3c516e url('/images/dancer.png') no-repeat bottom left;
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -4em;
 }
 
 #content {
