artwork section in ABOUT

--- a/views/about.tt
+++ b/views/about.tt
@@ -20,3 +20,12 @@ It's also possible to use GitHub to submit a patch, see the <a
 href="/contribute">contribute</a> page for more details about collaborative
 work about Dancer.
 </p>
+
+<h3>Artwork</h3>
+
+<p>
+The artwork on this website has been made with Creative Commons material.
+The dancer pictures are based on photos made by <a
+href="http://www.flickr.com/photos/misselisabeth/">misselisabeth</a>. Click
+here for <a href="http://creativecommons.org/licenses/by-nc-sa/2.0/">license details</a> about the artwork material on this website. 
+</p>
