--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -39,7 +39,10 @@
 </div>
 
 <div id="footer">
-    Dancer is copyright &copy; 2009 <a href="http://twitter.com/sukria">Alexis Sukrieh</a> - <a href="http://github.com/sukria/Dancer">Fork on GitHub</a> - <a href="http://github.com/sukria/perldancer-website">This website is free software</a>
+    Dancer is copyright &copy; 2009 
+    <a href="http://twitter.com/sukria">Alexis Sukrieh</a> - 
+    <a href="http://github.com/sukria/Dancer">Fork on GitHub</a> -
+    <a href="http://github.com/sukria/perldancer-website">This website is free software</a>
 </div>
 
 </body>
