--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,12 +114,21 @@ h2 {
 }
 
 h3 { 
-    letter-spacing: 4.5px;
     color: #3c516e;
     font-size:16px;
     letter-spacing:3px;
     line-height:1.25;
     text-transform:uppercase;
+    font-family: sans-serif;
+    margin-top: 0;
+}
+
+h4 { 
+    letter-spacing: 2px;
+    line-height:1.25;
+    color: #3c516e;
+    text-transform:uppercase;
+    font-size:14px;
     font-family: sans-serif;
     margin-top: 0;
 }
