--- a/views/quickstart.tt
+++ b/views/quickstart.tt
@@ -1,38 +1,58 @@
-<h2>Getting Started</h2>
+<h2>Installing Dancer</h2>
 
 <p>
-Dancer implements an idea that was firstly introduced by the Ruby community, with
-the <a href="http://www.sinatrarb.com">Sinatra</a> project.<br />
-Like it's cousin, it's a DSL for quickly creating web applications in Perl with minimal effort: 
+Install Dancer via CPAN:
 </p>
 
+<pre class="shell">
+$ sudo cpan Dancer
+</pre>
+
+<h2>Creating an application</h2>
+
+<p>Since version 0.9904, an helper is shipped with the distribution
+and lets you create an application with a single command:
+
+<pre class="shell">
+$ dancer -a mywebapp
++ [D] mywebapp 
++ [F] mywebapp/config.yml
++ [D] mywebapp/views
++ [D] mywebapp/views/layouts
++ [F] mywebapp/views/layouts/main.tt
++ [F] mywebapp/views/index.tt
++ [D] mywebapp/environments
++ [F] mywebapp/environments/production.yml
++ [F] mywebapp/environments/development.yml
++ [F] mywebapp/mywebapp.pm
++ [F] mywebapp/mywebapp.pl
++ [F] mywebapp/app.psgi
+</pre>
+
+<p>Everything is ready and works out of the box. It's already a working "Hello
+World" application waiting for being hacked.</p>
+
+<h2>Hacking into the routes</h2>
+
 <pre class="prettyprint">
-# myapp.pl
+# myapp.pm
 use Dancer;
 
 get '/' => sub {
     'Hello world!'
 };
 
+# add other routes here and there...
+
 dance;
 </pre>
 
-<p>
-Install Dancer's dependencies and Dancer itself:
-</p>
+<h2>Running the dance</h2>
 
-<pre>
-sudo cpan HTTP::Server::Simple
-sudo cpan File::MimeInfo
-sudo cpan Dancer
-</pre>
-
-<p>
-Run it and view at <a href="http://localhost:3000">http://localhost:3000</a>
-</p>
-
-<pre>
-$ perl ./hi.pl
+<pre class="shell">
+$ cd mywebapp
+$ ./mywebapp.pl
 >> Listening on 127.0.0.1:3000
 == Entering the dance floor ...
 </pre>
+
