mention #dancer on the about page

--- a/views/about.tt
+++ b/views/about.tt
@@ -21,6 +21,11 @@ href="/contribute">contribute</a> page for more details about collaborative
 work about Dancer.
 </p>
 
+<p>
+You can also reach the development team with on <code>irc.perl.org</code>, 
+chan <code>#dancer</code>.
+</p>
+
 <h3>Artwork</h3>
 
 <p>
