typo fix in about

--- a/views/about.tt
+++ b/views/about.tt
@@ -22,7 +22,7 @@ work about Dancer.
 </p>
 
 <p>
-You can also reach the development team with on <code>irc.perl.org</code>, 
+You can also reach the development team on <code>irc.perl.org</code>, 
 chan <code>#dancer</code>.
 </p>
 
