--- a/views/download.tt
+++ b/views/download.tt
@@ -3,7 +3,7 @@
 <h3>Releases</h3>
 
 <p>
-Last stable release is <a href="/downloads/Dancer-1.100.tar.gz">1.100</a>, you can
+Last release is <a href="/downloads/Dancer-1.122.tar.gz">1.122</a>, you can
 also check out the <a href="http://search.cpan.org/dist/Dancer/">CPAN page</a>.
 </p>
 
