--- a/views/contribute.tt
+++ b/views/contribute.tt
@@ -39,6 +39,12 @@ that's really great. At the time, the best way to get a review is to request a p
 <a href="http://github.com/sukria">sukria</a>.
 </p>
 
+<h3>Donate</h3>
+
+<p>
+If you want to support the team, you can also <a href="/donate">donate</a>.
+</p>
+
 <h3>Fix this website</h3>
 <p>
 Yeah, that website is written with <a
