--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -27,7 +27,9 @@
     <li><a href="/download">Download</a></li>
     <li><a href="/contribute">Contribute</a></li>
     <li><a href="/about">About</a></li>
+	<li><a href="/donate">Donate</a></li>
 </ul>
+
 
 </div>
 
