Another minor grammatical improvement.

--- a/views/about.tt
+++ b/views/about.tt
@@ -17,8 +17,8 @@ Dancer is free software, it is released under the same terms as Perl itself.
 <p>
 You can reach Alexis by mail at <code>sukria at sukria dot net</code>.
 It's also possible to use GitHub to submit a patch, see the <a
-href="/contribute">contribute</a> page for more details about collaborative
-work about Dancer.
+href="/contribute">contribute</a> page for more details about collaborating in
+Dancer development.
 </p>
 
 <p>
