--- a/views/documentation.tt
+++ b/views/documentation.tt
@@ -11,6 +11,9 @@ make the reading more confortable.
 <ul>
 <li><a href="http://search.cpan.org/dist/Dancer/lib/Dancer.pm">Dancer</a> : 
 	the main documentation, explaining all the details you want about Dancer's syntax.</li>
+<li><a href="http://search.cpan.org/dist/Dancer/lib/Dancer/Cookbook.pod"?Dancer::Cookbook</a> :
+        a quick-start guide with lots of examples to get you dancing
+        quickly</li>
 <li><a href="http://search.cpan.org/dist/Dancer/lib/Dancer/Config.pm">Dancer::Config</a> : 
 	details about configuration files for your application</li>
 <li><a href="http://search.cpan.org/dist/Dancer/lib/Dancer/Session.pm">Dancer::Session</a> 
